fix height of common cards for do not shift layout

--- a/src/components/Common/HomePageCards/style.module.css
+++ b/src/components/Common/HomePageCards/style.module.css
@@ -12,7 +12,7 @@
   @apply flex gap-[0.62rem] items-center;
 }
 .thumbnail {
-  @apply min-w-full w-full rounded-lg max-h-[268px];
+  @apply min-w-full w-full rounded-lg max-h-[268px] min-h-[200px];
   /* pointer-events: none; */
   -webkit-user-drag: none;
   /* user-select: none; */
